# memship

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  README.ca.md  README.es.md  README.md  docker-compose.quickstart.yml  docker-compose.yml
backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml  start.py
backend/alembic/: env.py
backend/alembic/versions/: 2ca72b2a038b_initial_schema.py  31484ce4ff84_add_stripe_columns_to_receipts_and_.py  353eb0c7affe_add_concepts_receipts_and_payment_.py  6c818ec5bfc1_add_webhook_events_table.py  7eb6d537f358_add_activities_modalities_prices_tables.py  98254e4ba28b_add_redsys_columns_and_extend_payment_.py  a1b2c3d4e5f6_add_registrations_table.py  b2c3d4e5f6a7_add_discount_codes_table.py  be824d96ca35_add_sepa_mandates_remittances_providers.py  c3d4e5f6a7b8_add_consents_and_attachments_tables.py  d4e5f6a7b8c9_add_bank_and_invoice_fields.py  dba8415a3c7f_add_payment_method_and_holder_to_persons.py  e5f6a7b8c9d0_add_bank_fields_to_persons.py  f993a3100855_add_groups_table_group_id_fk_restricted_.py
backend/app/: main.py
backend/app/cli/: seed.py
backend/app/core/: authorization.py  celery_app.py  config.py  db_utils.py  email.py  encryption.py  pagination.py
backend/app/db/: session.py
backend/app/tasks/: email_tasks.py
backend/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  wait-for-postgres.sh
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/unit/: test_activity_service.py  test_billing_models_v040.py  test_eligibility.py  test_email.py  (+9 more)
(+400 files in other folders)
