[project]
name = "memship"
version = "0.0.1"
description = "Memship — self-hosted membership management system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "argon2-cffi>=23.1",
    "PyJWT>=2.8",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",
    "celery[redis]>=5.4",
    "jinja2>=3.1",
    "resend>=2.0",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "factory-boy>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
